# peagent-analysis

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
01_training/: 01_preprocess_acrs.py  02_train_model.py  run_train.sbatch
02_evaluation/: 01_per_peak_auroc.py  02_per_group_metrics.py  03_latent_nmi.py
03_lexicon/: 01_attribution_maps.py  02_modisco_finemo.py  03_metapattern_compendium.py  04_classify_lexicon.py
04_cooccurrence/: 01_seqlet_cooccurrence.py
05_synergy/: 01_insilico_synergy.py
06_cross_species/: 01_cross_species_predict.py
07_acr_evolution/: 01_acr_conservation.py
08_variant_effect/: 01_score_variants.py
config/: species.py
docs/: RELEASE.md
